--- a/add-city.html
+++ b/add-city.html
@@ -3,11 +3,14 @@
 
 <head>
     <link rel="stylesheet" href="css/pages/common.css">
+    <link rel="stylesheet" href="css/pages/add-city.css">
     <title>TUP_LabComII_TP_Integrador</title>
+    <meta charset="UTF-8">
 </head>
 <body>
     <header>
         <h1>
+            <img class="redimension" src="images/logo_clima.png" alt="clima" >
             <span>Clima App</span>
         </h1>
         <nav>
@@ -23,12 +26,17 @@
         <section>
             <form>
                 <label for="Ingresar Ciudad">Ingrese la Ciudad a agregar:</label>
-                <input type="text" id="campodetexto" ></input>
-                <p><button type="submit">Agregar</button></p>
+                <p><input class="text" type="text" id="campodetexto" ></input></p>
+                <p><button class="button" type="submit">Agregar</button></p>
             </form>
         </section>
         <section id="form-city-list"></section>
         <section id="section-weather-result"></section>
+        <div>
+                <p class="caja-1">Ciudad agregada con éxito</p>
+                <p class="caja-2">ERROR: La ciudad ingresada no se encuentra en la API o se produjo un error al consultar</p>
+                <p class="caja-3">La ciudad ingresada ya se encuentra almacenada</p>
+        </div>
     </main>
     <footer>
         <p>
