--- a/help.html
+++ b/help.html
@@ -3,11 +3,14 @@
 
 <head>
     <link rel="stylesheet" href="css/pages/common.css">
+    <link rel="stylesheet" href="css/pages/help.css">
     <title>TUP_LabComII_TP_Integrador</title>
+    <meta charset="UTF-8">
 </head>
 <body>
     <header>
         <h1>
+            <img class="redimension" src="images/logo_clima.png" alt="clima" >
             <span>Clima App</span>
         </h1>
         <nav>
@@ -19,28 +22,24 @@
         </nav>
     </header>
     <main>
-        <h2>Seccion de Ayuda de ClimaApp</h2>
-        <p>Esta APP permite consultar el clima de una ciudad en particularutilizando la </p> 
-        <p> API de <a href=“https://openweathermap.org/api” target="_blank">OpenWeatherMap</a>. </p>
-        <p>Para poder consultar el clima, primero deberá <a href="add-city.html">AgregarUnaCiudad</a> y luego</p>
-        <p>seleccionar la ciudad desde la página <a href="index.html">Clima</a>.</p>
-
+        <h2>Ayuda ClimaApp v.1.0</h2>
+        <div>
+            <p class="caja-1">Esta APP permite consultar el clima de una ciudad en particularutilizando la API de <a href=“https://openweathermap.org/api” target="_blank">OpenWeatherMap</a>.</p> 
+            <p class="caja-2">Para poder consultar el clima, primero deberá <a href="add-city.html">AgregarUnaCiudad</a> y luego seleccionar la Ciudad en cuestión desde la página <a href="index.html">Clima.</a></p>
+        </div>
         <section>
             <form>
-                <label for="Ingresar Nombre">Nombre:</label>
-                <input type="text" id="Nombre"></input>
-                <p>
-                    <label for="Ingresar email">Email:</label>
-                    <input type="email" id="Email"></input>
+                <p class="name"><label for="Ingresar Nombre">Nombre:</label></p>
+                <p><input class="namecube" type="text" id="Nombre"></input></p>
+                <p class="email"><label for="Ingresar email">Email:</label></p>
+                <p><input class="emailcube" type="email" id="Email"></input></p>
+                <p class="message"><label for="Mensaje">Mensaje:</label></p>
+                <p><textarea class="messagecube" name="Mensaje" rows="10" cols="50"></textarea></p>
+                <p class="buttons">
+                    <button class="button1" type="reset">Limpiar</button>
+                    <button class="button2" type="submit">Enviar</button>
                 </p>
-                <p>
-                    <label for="Mensaje">Mensaje</label>
-                    <textarea name="Mensaje" rows="10" cols="50"></textarea>
-                </p>
-                <p>
-                    <button type="reset">Borrar</button>
-                    <button type="submit">Enviar</button>
-                </p>
+                <p class="error">Ingrese un Email válido</p>
             </form>
         </section>
         <section id="form-city-list"></section>
